--- a/module_square/src/main/res/layout/square_image_item.xml
+++ b/module_square/src/main/res/layout/square_image_item.xml
@@ -2,9 +2,9 @@
 <com.example.module_library.weight.XCRoundRectImageView xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/iv_picture"
     android:layout_margin="@dimen/dp_2"
-    android:scaleType="centerCrop"
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="@dimen/dp_100"
+    android:layout_height="wrap_content"
+    android:adjustViewBounds="true"
     tools:ignore="MissingDefaultResource">
 
 </com.example.module_library.weight.XCRoundRectImageView>
